Deactivate pypy3, there's some problem with pypy3+psutil

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
-  - "pypy3"
+# There seems to be some issue with pyp3 + psutils. Travis says
+#   Error importing unittest: unable to load extension module [...]
+#       /home/travis/virtualenv/pypy3-2.4.0/site-packages/psutil/_psutil_linux.pypy3-24.so: undefined symbol: PyModule_GetState
+#  - "pypy3"
   - "pypy"
   - "2.6"
   - "2.7"
