more debug output in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ install:
   - pip install coveralls
   - pyb install_dependencies
   
-script: "pyb verify analyze"
+script: "pyb verify analyze -X"
 after_success:
   - coveralls --verbose
