--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "3.4"
   - "3.5"
 install:
-  - pip install pybuilder
+  - pip install pybuilder psutil
   - pip install coveralls
   - pyb install_dependencies
   
