--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ python:
   - "3.4"
   - "3.5"
 install:
-  - pip install pybuilder psutil
+  - pip install pybuilder
   - pip install coveralls
   - pyb install_dependencies
   
-script: "pyb verify analyze -X"
+script: "pyb analyze -X"
 after_success:
   - coveralls --verbose
