--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ python:
   - "3.6"
 
 install:
-  - pip install pybuilder
+  - pip install pybuilder psutil
   - pip install coveralls
   - pyb install_dependencies
   
-script: "pyb analyze -X"
+script: "pyb verify -X"
 after_success:
   - coveralls --verbose
